Fix lists, spacing. Add project, education.
fixed list spacing,
fixed spacing to be based on blocks, not p
fixed inheritance properties (*, html)
added .enclosed class
added .grey tag
added hr and styling
added project "planner"
added details in course history

--- a/assets/stylesheets/index.css
+++ b/assets/stylesheets/index.css
@@ -1,17 +1,18 @@
 * {
 	line-height: 3ex;
-	font-family: IBM Plex Sans;
-	font-weight: 400;
+}
+
+html {
 	font-size: 12pt;
 }
 
-a.active {
+a {
 	color: rgb(80, 33, 173);
 	font-weight: 500;
 	text-decoration: underline;
 }
 
-a.active:hover {
+a:hover {
 	color: rgb(104, 42, 228);
 	text-shadow: 0 0 0.25rem rgb(237, 228, 255);
 }
@@ -33,6 +34,7 @@ body {
 	background-color: rgb(245, 245, 245);
 	display: flex;
 	flex-direction: column;
+	font-family: IBM Plex Sans;
 	gap: 0px;
 	overflow-x: hidden;
 	position: relative;
@@ -42,8 +44,6 @@ body {
 	display: flex;
 	align-items: center;
 	gap: 1rem;
-	max-width: 80vw;
-	margin: 1rem;
 }
 
 h1 {
@@ -51,6 +51,7 @@ h1 {
 	font-family: IBM Plex Serif;
 	font-weight: 800;
 	font-size: 2rem;
+	margin: 1rem 1rem -1rem 1rem;
 	text-align: center;
 }
 
@@ -59,7 +60,8 @@ h2 {
 	font-family: IBM Plex Serif;
 	font-size: 1.75rem;
 	font-weight: 500;
-	margin: 0.75em 0 0.4em 0;
+	margin: 2rem 1rem 1.5rem;
+	padding: 0;
 	text-align: center;
 }
 
@@ -68,7 +70,7 @@ h3 {
 	font-family: IBM Plex Mono;
 	font-size: 1.2rem;
 	font-weight: 500;
-	margin: 0rem 0 0rem 0;
+	margin: 0;
 	text-align: center;
 }
 
@@ -76,15 +78,22 @@ h3 {
 	display: flex;
 	align-items: center;
 	align-self: center;
-	gap: 0 1rem;
 	margin: 1rem 0 1rem 0;
 	max-width: 100vw;
 	overflow-x: scroll;
 }
 
+hr {
+	border-style: solid;
+	border-radius: 2px;
+	border-color: rgb(245,245,245);
+	border-width: 0.08rem;
+	margin: 0.2rem 0;
+}
+
 #john-portrait {
 	border-radius: 15px;
-	height: 8rem;
+	height: 10rem;
 	width: auto;
 }
 
@@ -100,41 +109,49 @@ mark {
 }
 
 p {
-	max-width: min(80vw, 27rem);
 	margin: 0.5rem 0.5rem 0.5rem 0.5rem;
+	font-weight: 400;
 }
 
-li > p {
-	margin: 0.5rem;
-}
-
-section {
-	margin: 1rem;
+.enclosed {
+	margin: 0 1rem;
 	padding: 1rem;
-}
-
-section.enclosed {
 	background-color: rgb(255,255,255);
 	border-radius: 20px;
+	max-width: 35rem;
+}
+
+.nopad {
+	margin: 0;
+	padding: 0;
+}
+
+.grey {
+	color: rgb(120,120,120);
 }
 
 /* list styling */
 ul.arrow {
 	list-style: none;
-	padding-left: 0;
 }
 
 ul.arrow > li {
 	margin-left: 1rem;
 }
 
+li > ul.arrow {
+	padding-left: 0;
+}
+
 ul.arrow > li::before {
+	font-family: IBM Plex Mono;
 	content: "→";
-	margin-left: - 1rem;
+	margin-left: -1rem;
 }
 
 li > ul.arrow > li::before {
 	content: "↳";
+
 }
 
 /* Mobile Web Design on Thin Screens */
@@ -150,11 +167,6 @@ li > ul.arrow > li::before {
 
 	article {
 		width: auto;
-		height: auto;
-	}
-
-	#john-portrait {
-		width: 40vw;
 		height: auto;
 	}
 }
